--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.VNaVenda" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/purple_200</item>
+    <style name="Theme.VNaVenda" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
     <!-- App Themes -->
-    <style name="Theme.VNaVenda.Starting" parent="Theme.AppCompat.NoActionBar">
-        <item name="windowSplashScreenBackground">@color/splashScreenBackgroundNight</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/app_icon</item>
+    <style name="Theme.VNaVenda.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/splashScreenBackground</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash_icon</item>
         <item name="postSplashScreenTheme">@style/Theme.VNaVenda</item>
     </style>
 </resources>
